# advent-of-code-2025

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check-build.yml  rust-docs.yml
pubs/: .eleventy.js  index.md  package-lock.json  package.json
pubs/_data/: eleventyComputed.js
pubs/_includes/: layout.njk
pubs/_includes/stylesheets/: _settings.scss  root.scss
pubs/_lib/: highlight.js  markdown-it.js
pubs/assets/styles/: highlight.css
pubs/blog/: day_1.md  day_10.md  day_2.md  day_3.md  day_4.md  day_5.md  day_6.md  day_7.md  day_8.md  day_9.md
src/: day_1.rs  day_10.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  main.rs
src/bootstrap_day/: bootstrap_error.rs  mod.rs
src/helpers/: mod.rs
